Fixed link jumping in header
Phone and email links:
was: display:block; (jumpung with hover)
now:display:inline;

--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,7 @@ p{
     font-size: var(--font-size-logo);
     line-height: 1.33;
     text-decoration:none;
-    letter-spacing: var(--letter-spacing-logo
-    );
+    letter-spacing: var(--letter-spacing-logo);
     text-transform: uppercase;
 }
 
@@ -95,8 +94,8 @@ p{
 }
 
 .nav-container{
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
     /* outline: 2px solid tomato; */
 }
 
@@ -104,8 +103,8 @@ align-items: center;
 .nav-container .list{
     align-items: center;
 }
-.nav-container .link{
-    display: block;
+.nav-container .nav .link{
+    display: inline-block;
     padding-top: 24px;
     padding-bottom: 24px;
 }
@@ -180,35 +179,37 @@ align-items: center;
 /* Main */
 
 .hero{
-    background-color: var(--dark-color);
     text-align: center;
     padding-top: 192px;
     padding-bottom: 192px;
+    background-color: var(--dark-color);
+
     /* outline: 2px solid tomato; */
 }
 
 .overlay{
-    content: "";
-    max-width: 1440px;
-    height: 600px;
+    background-position: center;
     margin-left: auto;
     margin-right: auto;
+    max-width: 1440px;
+    height: 600px;
+    content: "";
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: center;
 }
 
 
 .hero .title{
+    margin-bottom: 48px;
     font-weight: var(--font-weight-large);
     color: var(--secondary-color);
     font-size: 56px;
     line-height: 1.07;
-    margin-bottom: 48px;
 }
 
 .hero .button{
+    padding: 16px 32px;
     color: var(--secondary-color);
     background-color: var(--primery-brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -217,10 +218,8 @@ align-items: center;
     font-family:inherit;
     font-weight: var(--font-weight-medium);
     font-size: 16px;
-    /* line-height: 1.19;  */
     letter-spacing: 0.04em; 
     cursor: pointer;
-    padding: 16px 32px;
     }
 
 .hero .button:hover, .hero .button:focus {
@@ -235,22 +234,22 @@ align-items: center;
 }
 
 .advantages .h2{
-        position: absolute;
-        width: 1px;
-        height: 1px;
-        margin: -1px;
-        padding: 0;
-        overflow: hidden;
-        border: 0;
-        clip: rect(0 0 0 0);
+    position: absolute;
+    padding: 0;
+    margin: -1px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
 }
 
 .advantages .title{
+    margin-top: 8px;
     color: var(--dark-color);
     font-weight: var(--font-weight-medium);
     font-size: 20px;
     line-height: 1.2;
-    margin-top: 8px;
 }
 
 .advantages .list{
@@ -262,18 +261,18 @@ align-items: center;
 }
 
 .advantages .container-icon{
-    display: flex;
-    justify-content: center;
     align-items: center;
-    width: 264px;
+    justify-content: center;
+    display: flex;
     height: 112px;
+    width: 264px;
     border-radius: 4px;
     background-color: var(--light-color);
 }
 
 .advantages .text{
-    font-weight: var(--font-weight-small);
     margin-top: 8px;
+    font-weight: var(--font-weight-small);
 }
 
 /* Що ми робимо */
@@ -383,10 +382,10 @@ margin-right: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid var(--subtle-text-color);
-    border-radius: 4px;    
     width: 168px;
     height: 88px;
+    border: 1px solid var(--subtle-text-color);
+    border-radius: 4px;    
     fill:#8e8f99;
 }
 
@@ -410,6 +409,7 @@ margin-right: 24px;
 }
 
 .footer .logo{
+    margin-bottom: 16px;
     color: var(--primery-brand-color);
     font-family: var(--font-family-logo);
     font-weight: var(--font-weight-logo);
@@ -418,7 +418,6 @@ margin-right: 24px;
     text-decoration: none;
     letter-spacing: var(--letter-spacing-logo);
     
-    margin-bottom: 16px;
 }
 
 .footer .studio{
@@ -426,10 +425,10 @@ margin-right: 24px;
 }
 
 .footer .text{
+    margin-top: 16px;
+    width: 264px;
     color: var(--accent-color);
     font-weight: var(--font-weight-small);
-    width: 264px;
-    margin-top: 16px;
 }
 
 .footer .social-list{
@@ -463,16 +462,20 @@ margin-right: 24px;
 
 
 /* Portfolio page */
+
+
+
+
 /* Main */
 
 
 
 .main-title{
+    margin: -1px;
+    padding: 0;
     position: absolute;
     width: 1px;
     height: 1px;
-    margin: -1px;
-    padding: 0;
     overflow: hidden;
     border: 0;
     clip: rect(0 0 0 0);
@@ -480,11 +483,10 @@ margin-right: 24px;
 
 
 .filter{
-    
     display:flex;
+    margin-bottom: 72px;
     align-items: center;
     justify-content: center;
-    margin-bottom: 72px;
 }
 .filter .button{
     color:var(--primery-brand-color);
@@ -520,6 +522,42 @@ margin-right: 24px;
     flex-wrap: wrap;
 }
 
+.portfolio .cashless{
+    position: relative;
+    /* transform: 250ms opacity linear; */
+}
+
+.portfolio .cashless:hover::after{
+    /* position: relative; */
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 360px;
+    height: 300px;
+    content: "";
+    background-color: var(--primery-brand-color);
+    transform: 250ms opacity linear;
+}
+
+.portfolio .hiden-text .text{
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    padding:40px 32px 284px 32px;
+    content: "";
+    opacity: 0;
+    transform: 250ms opacity linear;
+    color: var(--light-color);
+}
+
+.hiden-text .text:hover{
+    opacity: 1;
+    /* transform: 250ms opacity linear; */
+}
 
 .portfolio .item:not(:nth-child(3n + 1)){
     margin-left: 24px;
